<resources>
    <string name="app_name">Alunos</string>

    <string name="aluno_nome_label">Nome do aluno</string>
    <string name="aluno_nome_placeholder">digite aqui o nome...</string>

    <string name="aluno_nascimento_label">Data de nascimento</string>
    <string name="aluno_nascimento_placeholder">ex.: dd/mm/yyyy</string>

    <string name="aluno_ra_label">Registro do aluno</string>
    <string name="aluno_ra_placeholder">apenas números...</string>

    <string name="aluno_site_label">Site do aluno</string>
    <string name="aluno_site_placeholder">ex.: www.meusite.com</string>

    <string name="aluno_telefone_label">Telefone do aluno</string>
    <string name="aluno_telefone_placeholder">digite aqui o telefone...</string>

    <string name="aluno_endereco_label">Endereço do aluno</string>
    <string name="aluno_endereco_placeholder">digite auqi o endereço...</string>

    <string name="aluno_nota_label">Nota do aluno</string>
</resources>
