<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_no_image"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_nome_label"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aluno_nome_placeholder"
        android:background="#fff"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_endereco_label"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aluno_endereco_placeholder"
        android:background="#fff"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_site_label"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aluno_site_placeholder"
        android:background="#fff"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_telefone_label"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aluno_telefone_placeholder"
        android:background="#fff"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno_nota_label"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="10"
        android:id="@+id/nota" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"/>

</LinearLayout>
</ScrollView>